# maskDetection

./: CMakeLists.txt  LICENSE  README.md
model/: face_mask_detection_libtorch.pth
src/: anchors.cpp  anchors.h  maskDetection.cpp  nms.cpp  nms.h  pytorch_convert.py
